--- a/ProyectoFinal_ActivosFijos/Views/Login/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Login/Index.cshtml
@@ -117,7 +117,7 @@
         <form action="@Url.Action("Index", "Login")" method="post">
             <h2>Iniciar sesión</h2>
 
-            <input type="text" id="username" name="username" class="form-control" placeholder="Nombre de usuario" required>
+            <input type="text" id="username" name="username" class="form-control" placeholder="Cedula Usuario" required>
             <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
 
             <input type="submit" value="Ingresar" class="boton-IS">
