--- a/ProyectoFinal_ActivosFijos/Views/Carros/Add.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/Add.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProyectoFinal_ActivosFijos.Models.TableViewModel.CarrosTableViewModel
 @{
-    ViewBag.Title = "Add Carros";
+    ViewBag.Title = "Agregar Vehiculos Nuevos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <style>
