--- a/ProyectoFinal_ActivosFijos/Views/Carros/Edit.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProyectoFinal_ActivosFijos.Models.TableViewModel.CarrosTableViewModel
 
 @{
-    ViewBag.Title = "Editar Carros";
+    ViewBag.Title = "Editar Vehiculos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
