--- a/ProyectoFinal_ActivosFijos/Views/Carros/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Carros/Index.cshtml
@@ -3,8 +3,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml"; // Utiliza el diseño específico para administración
 }
 
-<h2>Carros Page</h2>
-<p>Esta es la página de Carros.</p>
+<h2>Gestion de Vehiculos Existentes</h2>
 <script>
     // Ejecuta la función al cargar la página
     document.addEventListener('DOMContentLoaded', actualizarContadorCarrito);
@@ -89,7 +88,7 @@
         padding: 30px;
         width: 98%;
         margin: auto;
-        background: #54c47c;
+        background: #4098d6;
         box-shadow: 0px 94px 277px -6px #ffffff;
     }
 
