--- a/ProyectoFinal_ActivosFijos/Views/Repuesto/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Repuesto/Index.cshtml
@@ -91,7 +91,7 @@
         padding: 30px;
         width: 98%;
         margin: auto;
-        background: #54c47c;
+        background: #4098d6;
         box-shadow: 0px 94px 277px -6px #ffffff;
     }
 
