revision de repositorio
Alessandro

--- a/ProyectoFinal_ActivosFijos/Views/Usuario/Index.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Usuario/Index.cshtml
@@ -46,7 +46,7 @@
                             
                                 <a class="btn btn-success" href="@Url.Action("Edit", new { ID = @Usuarios.Id })">Editar</a>
                                 <a class="btn btn-danger" href="@Url.Action("Delete", new { ID = @Usuarios.Id })"
-                                   onclick="return confirm('¿Estás seguro de que deseas eliminar este carro?');">Eliminar</a>
+                                   onclick="return confirm('¿Estás seguro de que deseas eliminar este usuario?');">Eliminar</a>
                            
                         </td>
                     </tr>
