--- a/ProyectoFinal_ActivosFijos/Views/Usuario/Add.cshtml
+++ b/ProyectoFinal_ActivosFijos/Views/Usuario/Add.cshtml
@@ -405,9 +405,15 @@
                 @Html.ValidationMessageFor(model => model.Contrasena, "", new { @class = "text-danger" })
             </div>
 
+           
+
             <div class="form-group">
                 @Html.LabelFor(model => model.TipoDeUsuario, htmlAttributes: new { @class = "control-label" })
-                @Html.EditorFor(model => model.TipoDeUsuario, new { htmlAttributes = new { @class = "form-control" } })
+                <select id="TipoDeUsuarioDropdown" name="TipoDeUsuario" class="form-control" data-val="true" data-val-required="Tipo de usuario obligatorio">
+                    <option value="" selected>-- Seleccione un tipo de usuario --</option>
+                    <option value="1">Administrador</option>
+                    <option value="2">Cliente</option>
+                </select>
                 @Html.ValidationMessageFor(model => model.TipoDeUsuario, "", new { @class = "text-danger" })
             </div>
 
